# zamusic

./: .gitignore  README.md  docker-compose.yml  requirements.txt
devops/: requirements.txt
infrastructure/traefik/: traefik.yml
services/auth_service/: Dockerfile  README.md  pyproject.toml
services/auth_service/alembic/: env.py
